--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Barbershop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shurtcut icon" href="./images/logo.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
@@ -87,17 +88,13 @@
       <!-- ********************************************** -->
     </header>
     <main>
-      <!-- !!    Slider -->
-
-      <!-- !!! Slider End **************************** -->
       <section class="section slider">
-        <!-- <div class="slider__blok-social"> -->
         <ul class="slider__social on-visible">
           <li><a class="link slider__link" href="">Instagram</a></li>
           <li><a class="link slider__link" href="">Youtube</a></li>
         </ul>
 
-        <!-- </div> -->
+        <!-- !!    Slider -->
         <div class="slider__blok container">
           <div class="sidebar sidebar-mobile">
             <div id="sl1"></div>
@@ -105,39 +102,21 @@
             <div id="sl3"></div>
           </div>
           <div class="main-slide sidebar-mobile">
-            <div
-              class="sidebar-mobile"
-              style="
-                background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)),
-                  url('./images/Slider01.jpg');
-              "
-            ></div>
-            <div
-              class="sidebar-mobile"
-              style="
-                background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)),
-                  url('./images/Slider02.jpg');
-              "
-            ></div>
-            <div
-              class="sidebar-mobile"
-              style="
-                background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)),
-                  url('./images/Slider03.jpg');
-              "
-            ></div>
+            <div class="sidebar-mobile slide-01"></div>
+            <div class="sidebar-mobile slide-02"></div>
+            <div class="sidebar-mobile slide-03"></div>
           </div>
           <div class="controls sidebar-mobile">
-            <button class="down-button">Назад</button>
-            <button class="up-button">Вперед</button>
+            <button class="down-button slider-btn">Назад</button>
+            <button class="up-button slider-btn">Вперед</button>
           </div>
+          <!-- !!! Slider **************************** -->
           <div class="slider__blok-title">
             <p class="subtitle slider__subtitle" lang="en">A hair salon for men in Kyiv</p>
             <h1 class="main-title" lang="en">BarberShop</h1>
             <p class="slider__text">Мы эксперты в модных мужских стрижках.</p>
             <p class="slider__text">Работаем быстро, осторожно и со вкусом.</p>
           </div>
-          <!-- <p class="slider__text">Работаем быстро, осторожно и со вкусом.</p> -->
         </div>
       </section>
       <section class="section about" id="about">
@@ -630,13 +609,29 @@
       <section class="section contact" id="contact">
         <div class="contact__blok-left">
           <h2 class="section-title contact__title">Онлайн-запись</h2>
-          <form class="form">
+          <form class="form" autocomplete="off">
             <div class="form__group">
-              <input class="form__input form__name" type="text" id="name" />
+              <input
+                class="form__input form__name"
+                type="text"
+                id="name"
+                required
+                minlength="3"
+                placeholder=" "
+              />
               <label class="form__label" for="name">Имя*</label>
             </div>
             <div class="form__group">
-              <input class="form__input form__tel" type="text" id="tel" />
+              <input
+                class="form__input form__tel"
+                type="text"
+                id="tel"
+                required
+                minlength="10"
+                pattern="[0]{1}[3-9]{1}[0-9]{1}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="Введите номер телефона в формате 088-888-88-88"
+                placeholder=" "
+              />
               <label class="form__label" for="tel">Телефон*</label>
             </div>
             <div class="form__group">
@@ -646,6 +641,7 @@
                 id="message"
                 cols="2"
                 rows="1"
+                placeholder=" "
               ></textarea>
               <label class="form__label" for="message">сообщение</label>
             </div>
@@ -689,7 +685,7 @@
       </section>
     </main>
     <footer class="section footer">
-      <p class="footer__text">&copy; Copyright 2020</p>
+      <p class="footer__text">&copy; wolk8506 2021</p>
       <ul class="footer__list">
         <li class="footer__item footer__item--decor">
           <a class="link footer__link" href="">Instagram</a>
